# rusoto

./: .gitmodules  .travis.yml  Cargo.toml  appveyor.yml
codegen/: Cargo.toml
codegen/src/: botocore.rs  lib.rs
core/: Cargo.toml  README.md  build.rs
core/src/: lib.rs  signature.rs
integration_tests/: Cargo.toml
integration_tests/tests/: applicationautoscaling.rs  appstream.rs  budgets.rs
legacy/: Cargo.toml
mock/: Cargo.toml
mock/src/: lib.rs
rusoto/: Cargo.toml  fn.default_tls_client.html  index.html  sidebar-items.js  struct.HttpDispatchError.html  struct.HttpResponse.html  trait.DispatchSignedRequest.html
rusoto/acm/: enum.AddTagsToCertificateError.html  enum.DeleteCertificateError.html  enum.DescribeCertificateError.html  enum.GetCertificateError.html  enum.ImportCertificateError.html  enum.ListCertificatesError.html  enum.ListTagsForCertificateError.html  enum.RemoveTagsFromCertificateError.html  enum.RequestCertificateError.html  enum.ResendValidationEmailError.html  struct.AcmClient.html  struct.AddTagsToCertificateRequest.html  struct.CertificateDetail.html  struct.CertificateSummary.html  struct.DeleteCertificateRequest.html  struct.DescribeCertificateRequest.html  struct.DescribeCertificateResponse.html  struct.DomainValidation.html  struct.DomainValidationOption.html  struct.GetCertificateRequest.html  struct.GetCertificateResponse.html  struct.ImportCertificateRequest.html  struct.ImportCertificateResponse.html  struct.ListCertificatesRequest.html  struct.ListCertificatesResponse.html  struct.ListTagsForCertificateRequest.html  struct.ListTagsForCertificateResponse.html  struct.RemoveTagsFromCertificateRequest.html  struct.RequestCertificateRequest.html  struct.RequestCertificateResponse.html  struct.ResendValidationEmailRequest.html  struct.Tag.html  type.Arn.html  type.CertificateBody.html  type.CertificateBodyBlob.html  type.CertificateChain.html  type.CertificateChainBlob.html  type.CertificateStatus.html  type.CertificateStatuses.html  type.CertificateSummaryList.html  (+18 more)
rusoto/autoscaling/: enum.AttachInstancesError.html  enum.AttachLoadBalancerTargetGroupsError.html  enum.AttachLoadBalancersError.html  enum.CompleteLifecycleActionError.html  enum.CreateAutoScalingGroupError.html  enum.CreateLaunchConfigurationError.html  enum.CreateOrUpdateTagsError.html  enum.DeleteAutoScalingGroupError.html  enum.DeleteLaunchConfigurationError.html  enum.DeleteLifecycleHookError.html  enum.DeleteNotificationConfigurationError.html  enum.DeletePolicyError.html  enum.DeleteScheduledActionError.html  enum.DeleteTagsError.html  enum.DescribeAccountLimitsError.html  enum.DescribeAdjustmentTypesError.html  enum.DescribeAutoScalingGroupsError.html  enum.DescribeAutoScalingInstancesError.html  enum.DescribeAutoScalingNotificationTypesError.html  enum.DescribeLaunchConfigurationsError.html  enum.DescribeLifecycleHookTypesError.html  enum.DescribeLifecycleHooksError.html  enum.DescribeLoadBalancerTargetGroupsError.html  enum.DescribeLoadBalancersError.html  enum.DescribeMetricCollectionTypesError.html  enum.DescribeNotificationConfigurationsError.html  enum.DescribePoliciesError.html  enum.DescribeScalingActivitiesError.html  enum.DescribeScalingProcessTypesError.html  enum.DescribeScheduledActionsError.html  enum.DescribeTagsError.html  enum.DescribeTerminationPolicyTypesError.html  enum.DetachInstancesError.html  enum.DetachLoadBalancerTargetGroupsError.html  enum.DetachLoadBalancersError.html  enum.DisableMetricsCollectionError.html  enum.EnableMetricsCollectionError.html  enum.EnterStandbyError.html  enum.ExecutePolicyError.html  enum.ExitStandbyError.html  (+211 more)
rusoto/cloudformation/: enum.CancelUpdateStackError.html  enum.ContinueUpdateRollbackError.html  enum.CreateChangeSetError.html  enum.CreateStackError.html  enum.DeleteChangeSetError.html  enum.DeleteStackError.html  enum.DescribeAccountLimitsError.html  enum.DescribeChangeSetError.html  enum.DescribeStackEventsError.html  enum.DescribeStackResourceError.html  enum.DescribeStackResourcesError.html  enum.DescribeStacksError.html  enum.EstimateTemplateCostError.html  enum.ExecuteChangeSetError.html  enum.GetStackPolicyError.html  enum.GetTemplateError.html  enum.GetTemplateSummaryError.html  enum.ListChangeSetsError.html  enum.ListExportsError.html  enum.ListImportsError.html  enum.ListStackResourcesError.html  enum.ListStacksError.html  enum.SetStackPolicyError.html  enum.SignalResourceError.html  enum.UpdateStackError.html  enum.ValidateTemplateError.html  struct.AccountLimit.html  (+165 more)
rusoto/services/cloudhsm/: Cargo.toml
rusoto/services/cloudhsm/src/: generated.rs
rusoto/services/codedeploy/: Cargo.toml
rusoto/services/codedeploy/src/: generated.rs
rusoto/services/dynamodbstreams/: Cargo.toml
rusoto/services/dynamodbstreams/src/: generated.rs  lib.rs
rusoto/services/ssm/: Cargo.toml
rusoto/services/ssm/src/: generated.rs  lib.rs
rusoto/services/storagegateway/: Cargo.toml
rusoto/services/storagegateway/src/: generated.rs
rusoto/services/workspaces/: Cargo.toml
rusoto/services/workspaces/src/: generated.rs
rusoto_all/: Cargo.toml
rusoto_tests/: Cargo.toml
rusoto_tests/services/acm/: Cargo.toml
rusoto_tests/services/acm/tests/: acm.rs
rusoto_tests/services/autoscaling/: Cargo.toml
rusoto_tests/services/autoscaling/tests/: autoscaling.rs
rusoto_tests/services/ec2/: Cargo.toml
rusoto_tests/services/ec2/src/: lib.rs
service_crategen/: services.json
servicegen/: Cargo.toml
servicegen/codegen/src/: botocore.rs
servicegen/codegen/src/generator/: json.rs  mod.rs  query.rs  rest_json.rs  rest_xml.rs  tests.rs  type_filter.rs
servicegen/src/: botocore.rs  cargo.rs  main.rs  serialization.rs
services/acm/: Cargo.toml
services/acm/src/: lib.rs
services/ec2/: Cargo.toml  build.rs
services/ec2/src/: lib.rs
services/ec2/tests/: response_parsing.rs
services/rds/: Cargo.toml
services/rds/src/: lib.rs
services/rds/tests/: response_parsing.rs
services/s3/: Cargo.toml  build.rs
services/s3/src/: lib.rs
services/s3/tests/: response_parsing.rs  s3.rs
src/: lib.rs
(+11220 files in other folders)
