[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
description = "AWS SDK for Rust - Internal Mocking Helpers"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
exclude = [".gitignore", ".travis.yml", "docgen.sh", "helpers/**/*", "codegen/**/*"]
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_mock"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.1.0"

[dependencies]
chrono = "0.2.21"
hyper = "0.10.0"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.rusoto_core]
path = "../../core"
version = "0.24.0"

[features]
nightly-testing = ["clippy", "rusoto_core/nightly-testing"]
