[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Certificate Manager"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon", "AWS Certificate Manager", "acm"]
license = "MIT"
name = "rusoto_acm"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.24.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
serde = "0.9.5"
serde_json = "0.9.4"
serde_derive = "0.9.5"
hyper = "0.10.0"

[dependencies.rusoto]
path = "../../core"
[dev-dependencies.rusoto_mock]
path = "../../mock"
