[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust - EC2"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon", "EC2"]
license = "MIT"
name = "rusoto_ec2"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.1.0"

[build-dependencies.rusoto_codegen]
default-features = false
path = "../../codegen"
version = ">= 0.8.0"

[dependencies]
hyper = "0.10.0"
md5 = "0.3.2"
xml-rs = "0.3"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.rusoto_core]
path = "../../core"
version = "0.24.0"

[dev-dependencies]
env_logger = "0.4.0"
rand = "^0.3.14"

[dev-dependencies.rusoto_mock]
path = "../../mock"
version = "0.1.0"

[features]
default = []
nightly-testing = ["clippy", "rusoto_codegen/nightly-testing", "rusoto_core/nightly-testing"]
unstable = []
