[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon Relational Database Service @ 2014-10-31"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon", "rds", "Amazon Relational Database Service", "rds"]
license = "MIT"
name = "rusoto_rds"
repository = "https://github.com/rusoto/rusoto"
version = "0.24.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
hyper = "0.10.0"
xml-rs = "0.3"

[dependencies.rusoto]
version = "0.24.0"
path = "../../core"
features = ["xml"]
[dev-dependencies.rusoto_mock]
path = "../../mock"
