[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon Simple Systems Manager (SSM) @ 2014-11-06"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon", "ssm", "Amazon Simple Systems Manager (SSM)", "ssm"]
license = "MIT"
name = "rusoto_ssm"
repository = "https://github.com/rusoto/rusoto"
version = "0.24.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
hyper = "0.10.0"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9.4"

[dependencies.rusoto_core]
version = "0.24.0"
path = "../../core"
[dev-dependencies.rusoto_mock]
path = "../../mock"
