[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Certificate Manager - Integration Tests"
license = "MIT"
name = "rusoto_acm_tests"
version = "0.24.0"

[dependencies.rusoto_core]
version = "0.24.0"
path = "../../../rusoto/core"

[dependencies.rusoto_acm]
version = "0.24.0"
path = "../../../rusoto/services/acm"
