[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon Elastic Compute Cloud - Integration Tests"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon", "ec2", "Amazon Elastic Compute Cloud", "ec2"]
license = "MIT"
name = "rusoto_ec2"
repository = "https://github.com/rusoto/rusoto"
version = "0.24.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
hyper = "0.10.0"
xml-rs = "0.3"

[dependencies.rusoto_core]
version = "0.24.0"
path = "../../core"
features = ["xml"]
[dev-dependencies.rusoto_mock]
path = "../../mock"
